# server/doc/api-doc.json
@@ -3,22 +3,63 @@
   "info": {
     "description": "A Daily Clock Api",
     "version": "1.0.0",
-    "title": "Adailyclock API",
+    "title": "Adayclock API",
     "termsOfService": "",
     "contact": {
-      "email": "admin@adailyclock.com"
+      "email": "admin@adayclock.com"
     },
     "license": {
       "name": "Apache 2.0",
       "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
     }
   },
-  "host": "api.adailyclock.com",
+  "host": "api.adayclock.com",
   "basePath": "/api",
   "schemes": [
     "https"
   ],
   "paths": {
+    "/user/login": {
+      "post": {
+        "tags": [
+          "user"
+        ],
+        "summary": "Get user JWT Token",
+        "description": "Returns JWT Token",
+        "operationId": "postLoginUser",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "email": "email",
+            "in": "body",
+            "description": "User email",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "password": "password",
+            "in": "body",
+            "description": "User password",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/AuthResponse"
+            }
+          },
+          "404": {
+            "description": "User not found"
+          }
+        }
+
+      }
+    },
     "/user/{userId}": {
       "get": {
         "tags": [
@@ -56,7 +97,7 @@
         },
         "security": [
           {
-            "api_key": []
+            "JWTToken": []
           }
         ]
       }
@@ -98,7 +139,7 @@
         },
         "security": [
           {
-            "api_key": []
+            "JWTToken": []
           }
         ]
       }
@@ -148,7 +189,7 @@
         },
         "security": [
           {
-            "api_key": []
+            "JWTToken": []
           }
         ]
       },
@@ -171,6 +212,11 @@
             "schema": {
               "$ref": "#/definitions/Product"
             }
+          }
+        ],
+        "security": [
+          {
+            "JWTToken": []
           }
         ],
         "responses": {
@@ -224,6 +270,11 @@
             }
           }
         ],
+        "security": [
+          {
+            "JWTToken": []
+          }
+        ],
         "responses": {
           "201": {
             "description": "successful operation",
@@ -274,7 +325,7 @@
         },
         "security": [
           {
-            "api_key": []
+            "JWTToken": []
           }
         ]
       }
@@ -324,7 +375,7 @@
         },
         "security": [
           {
-            "api_key": []
+            "JWTToken": []
           }
         ]
       },
@@ -363,6 +414,11 @@
             "schema": {
               "$ref": "#/definitions/Calendar"
             }
+          }
+        ],
+        "security": [
+          {
+            "JWTToken": []
           }
         ],
         "responses": {
@@ -409,6 +465,11 @@
             "schema": {
               "$ref": "#/definitions/Calendar"
             }
+          }
+        ],
+        "security": [
+          {
+            "JWTToken": []
           }
         ],
         "responses": {
@@ -478,6 +539,11 @@
             "type": "integer"
           }
         ],
+        "security": [
+          {
+            "JWTToken": []
+          }
+        ],
         "responses": {
           "200": {
             "description": "successful operation",
@@ -517,6 +583,11 @@
             "schema": {
               "$ref": "#/definitions/Activity"
             }
+          }
+        ],
+        "security": [
+          {
+            "JWTToken": []
           }
         ],
         "responses": {
@@ -562,6 +633,11 @@
             }
           }
         ],
+        "security": [
+          {
+            "JWTToken": []
+          }
+        ],
         "responses": {
           "201": {
             "description": "successful operation",
@@ -604,6 +680,11 @@
             "format": "int64"
           }
         ],
+        "security": [
+          {
+            "JWTToken": []
+          }
+        ],
         "responses": {
           "200": {
             "description": "successful operation",
@@ -622,22 +703,27 @@
     }
   },
   "securityDefinitions": {
-    "petstore_auth": {
-      "type": "oauth2",
-      "authorizationUrl": "http://petstore.swagger.io/oauth/dialog",
-      "flow": "implicit",
-      "scopes": {
-        "write:pets": "modify pets in your account",
-        "read:pets": "read your pets"
-      }
-    },
-    "api_key": {
+    "JWTToken": {
       "type": "apiKey",
-      "name": "api_key",
+      "name": "Authorization",
       "in": "header"
     }
   },
   "definitions": {
+    "AuthResponse": {
+      "type": "object",
+      "properties": {
+        "message": {
+          "type": "string"
+        },
+        "token": {
+          "type": "string"
+        }
+      },
+      "xml": {
+        "name": "AuthResponse"
+      }
+    },
     "User": {
       "type": "object",
       "properties": {
